Single routes for widgets, user full info on widgets index json and unaltered case for key transformation
